--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -10,7 +10,8 @@
                     <h3 class="display-5 text-center">Planning</h3>
                     <a class="btn btn-primary btn-lg dashboard-button" href="@routes.Application.classTimetable()" role="button">
                         Class Timetable</a>
-                    <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">Termly Plans</button>
+                    <a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button">
+                        Termly Plans</a>
                     <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">Weekly Plans</button>
                 </div>
                 <div class="col-md-1">
@@ -19,7 +20,8 @@
                 <div class="col-md-5 dashboardFadedBackground text-center">
                     <h3 class="display-5 text-center">Resources</h3>
                     <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">IDL</button>
-                    <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">Lesson Ideas</button>
+                    <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">
+                        Lesson Ideas</button>
                 </div>
             </div>
 
@@ -28,8 +30,10 @@
             <div class="row">
                 <div class="col-md-5 dashboardFadedBackground text-center">
                     <h3 class="display-5 text-center">Communication</h3>
-                    <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">School Noticeboard</button>
-                    <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">Time To Teach Community</button>
+                    <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">
+                        School Noticeboard</button>
+                    <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">
+                        Time To Teach Community</button>
                     <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">Parents</button>
                 </div>
                 <div class="col-md-1">
