--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -10,8 +10,8 @@
                     <h3 class="display-5 text-center">Planning</h3>
                     <a class="btn btn-primary btn-lg dashboard-button" href="@routes.Application.classTimetable()" role="button">
                         Class Timetable</a>
-                    <a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button">
-                        Termly Plans</a>
+                    <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">Termly Plans</button>
+                    @*<a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button">Termly Plans</a>*@
                     <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">Weekly Plans</button>
                 </div>
                 <div class="col-md-1">
