--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="col-md-5 dashboardFadedBackground text-center">
                     <h3 class="display-5 text-center">Planning</h3>
-                    <a class="btn btn-primary btn-lg dashboard-button" href="@routes.Application.classTimetable()" role="button">
+                    <a class="btn btn-primary btn-lg dashboard-button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classTimetable()" role="button">
                         Class Timetable</a>
                     <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">Termly Plans</button>
                     @*<a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button">Termly Plans</a>*@
