--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -4,6 +4,6 @@
 @timetoteachAppMain(handler, s"Termly Plans",
     userPictureUri, userFirstName, userFamilyName) {
     <div class="container">
-    <h1>Termly Plans - under development</h1>
+    <h1>Classes Home</h1>
     </div>
 }
