--- a/server/app/views/planning/classtimetables/classtimetable.scala.html
+++ b/server/app/views/planning/classtimetables/classtimetable.scala.html
@@ -30,7 +30,7 @@
                                 </ol>
                                 In either case you will be given the option of how much of that session to fill. e.g. 1/3, 1/2 or
                                 Full session, or be more specific, say 9:45 to 10:15" >
-                        <span aria-hidden="true"><img src="@routes.Assets.versioned("../../../../public/icons/everWonder.png")" alt="Info Help" height="32px"></span>
+                        <span aria-hidden="true"><img src="@routes.Assets.versioned("icons/everWonder.png")" alt="Info Help" height="32px"></span>
                     </button>
 
                     <button id="class-timetable-subject-aside-toggle-button" type="button" class="close" data-dismiss="modal" aria-label="Close">
