--- a/server/public/stylesheets/classes.css
+++ b/server/public/stylesheets/classes.css
@@ -9,10 +9,8 @@
 }
 
 .add-new-class-form-section {
-    /*margin-top: 2rem;*/
-    /*margin-bottom: 1rem;*/
-    /*border: 1px solid lightgrey;*/
-    /*padding: 1rem;*/
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 .add-new-class-form-row {
@@ -21,5 +19,5 @@
 }
 
 #add-new-class-groups-button {
-    background: white;
+    /*background: white;*/
 }
