--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -1,5 +1,5 @@
 @import controllers.serviceproxies.TimeToTeachUserId
-@import models.timetoteach.classdetails.ClassDetails
+@import shared.model.classdetail.ClassDetails
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classes: List[ClassDetails])
 
 @timetoteachAppMain(handler, s"Classes",
