--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -9,19 +9,27 @@
 
    <h6 class="text-center text-muted form-header">New Class Details</h6>
 
+   <div>
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4 mx-auto" id="add-new-class-form-errors"></div>
+    <div class="col-sm-4"></div>
+   </div>
+
    <div class="form-row add-new-class-form-row">
-    <div class="col-sm-12">
-     <label for="className">Class Name</label>
-     <input type="text" id="className" name="className" class="form-control" placeholder="Enter the class name, e.g. P3AB" required>
+    <div class="col-sm-3">
+     <label class="add-new-class-label" for="className">Class Name</label>
+     <input type="text" id="className" name="className" class="form-control" placeholder="Enter class name" required>
     </div>
+    <div class="col-sm-9"></div>
    </div>
 
    <div class="form-row add-new-class-form-row">
     <div class="col-sm-12">
-     <label for="className">Class Groups</label>
+     <label class="add-new-class-label" for="add-new-class-groups-button">Class Groups</label>
 
      <div id="add-new-class-groups-div"></div>
-     <button id="add-new-class-groups-button" type="button" class="btn btn-sm btn-outline-info">Add New Class Group</button>
+     <button id="add-new-class-groups-button" type="button" class="btn btn-sm btn-primary add-new-class-button">
+      Add New Class Group</button>
     </div>
    </div>
 
@@ -31,17 +39,18 @@
 
      <div id="add-new-class-teachers-div"></div>
 
-     <button id="add-new-class-groups-button" type="button" class="btn btn-sm btn-outline-info">Invite or Add New Teacher</button>
+     <button id="add-new-class-teachers-button" type="button" class="btn btn-sm btn-primary add-new-class-button">
+      Invite or Add New Teacher</button>
     </div>
    </div>
 
-   <div id="class-timetable-clear-cancel-save-buttons" class="clear-cancel-save-buttons">
-    <button id="clear-subjects-from-class-timetable-button" type="button" class="btn btn btn-secondary">
+   <div id="new-class-clear-cancel-save-buttons" class="clear-cancel-save-buttons">
+    <button id="clear-subjects-from-new-class-button" type="button" class="btn btn btn-secondary">
      Clear</button>
-    <button id="cancel-class-timetable-button" type="button" class="btn btn btn-secondary">
+    <button id="cancel-new-class-button" type="button" class="btn btn btn-secondary">
      <a href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">Cancel</a>
     </button>
-    <button id="save-class-timetable-button" type="button" class="btn btn btn-primary">Save</button>
+    <button id="save-new-class-button" type="button" class="btn btn btn-primary">Save</button>
    </div>
 
   </div>
