--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -33,16 +33,16 @@
     </div>
    </div>
 
-   <div class="form-row add-new-class-form-row">
-    <div class="col-sm-12">
-     <label for="className">Class Teachers</label>
+   @*<div class="form-row add-new-class-form-row">*@
+    @*<div class="col-sm-12">*@
+     @*<label for="className">Class Teachers</label>*@
 
-     <div id="add-new-class-teachers-div"></div>
+     @*<div id="add-new-class-teachers-div"></div>*@
 
-     <button id="add-new-class-teachers-button" type="button" class="btn btn-sm btn-primary add-new-class-button">
-      Invite or Add New Teacher</button>
-    </div>
-   </div>
+     @*<button id="add-new-class-teachers-button" type="button" class="btn btn-sm btn-primary add-new-class-button">*@
+      @*Invite or Add New Teacher</button>*@
+    @*</div>*@
+   @*</div>*@
 
    <div id="new-class-clear-cancel-save-buttons" class="clear-cancel-save-buttons">
     <button id="clear-subjects-from-new-class-button" type="button" class="btn btn btn-secondary">
