--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -75,7 +75,7 @@
             <div id="mainAppTopMargin"></div>
 
             <div class="container">
-                <div id="class-timetable-subject-warning" class="alert alert-danger alert-dismissible fade show text-center" role="alert" >
+                <div id="class-timetable-subject-warning" class="alert alert-info alert-dismissible fade show text-center" role="alert" >
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
