--- a/server/public/stylesheets/classes.css
+++ b/server/public/stylesheets/classes.css
@@ -9,12 +9,11 @@
 }
 
 .add-new-class-form-section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .add-new-class-form-row {
-    /*margin-top: 2rem;*/
     margin-bottom: 3rem;
 }
 
@@ -35,6 +34,7 @@
 
 #add-new-class-form-errors {
     margin: 1rem 0;
+    display: none;
 }
 
 .add-new-class-form-error {
