--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -57,5 +57,9 @@
  </div>
 
 
+ <script>
+         localStorage.setItem("timeToTeachUserId", "@{tttUserId.value}");
+ </script>
+
  @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
