--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -50,7 +50,7 @@
     <button id="cancel-new-class-button" type="button" class="btn btn btn-secondary">
      <a href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">Cancel</a>
     </button>
-    <button id="save-new-class-button" type="button" class="btn btn btn-primary">Save</button>
+    <button id="save-new-class-button" type="button" class="btn btn btn-primary">Create New Class</button>
    </div>
 
   </div>
