--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -17,7 +17,8 @@
     <div class="row">
      <div class="card-deck teacher-classes-deck">
      @for((classDetail, index) <- classes.zipWithIndex) {
-      <div class="card teacher-classes-card" style="width: 18rem;">
+      <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="card teacher-classes-card" >
        <div class="card-header">
         @classDetail.className.name
        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -29,21 +30,13 @@
        <div class="card-body">
         <p class="card-text">some description about class ...</p>
         <div class="row">
-         <div class="col-lg-2"></div>
-         <div class="col-lg-8">
+         <div class="col-sm-12 col-md-10 col-xl-8">
           <button class="rounded btn btn-outline-info btn-block teachers-classes-btn teachers-classes-goto-btn" data-class-id="@classDetail.id.id" role="button">Go To Class</button>
          </div>
-         <div class="col-lg-2"></div>
         </div>
        </div>
       </div>
-
-      @if((index + 1) % 3 == 0) {
       </div>
-    </div>
-    <div class="row">
-     <div class="card-deck">
-    }
     }
    </div>
   </div>
@@ -56,3 +49,4 @@
 
 
 }
+
