--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -17,36 +17,39 @@
     <div class="row">
      <div class="card-deck teacher-classes-deck">
      @for((classDetail, index) <- classes.zipWithIndex) {
-      <div class="col-lg-3 col-md-6 col-sm-12">
-      <div class="card teacher-classes-card" >
-       <div class="card-header">
-        @classDetail.className.name
-       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-       </button>
-       </div>
-       <img class="card-img-top" src="@routes.Assets.versioned(s"images/classes/classroom-${index + 1 % 5}.jpeg")"
-       alt="Class Image" height="192px">
-       <div class="card-body">
-        <p class="card-text">some description about class ...</p>
-        <div class="row">
-         <div class="col-sm-12 col-md-10 col-xl-8">
-          <button class="rounded btn btn-outline-info btn-block teachers-classes-btn teachers-classes-goto-btn" data-class-id="@classDetail.id.id" role="button">Go To Class</button>
+      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+       <div class="card teacher-classes-card" >
+        <div class="card-header">
+         @classDetail.className.name
+        <button type="button" class="close delete-teacher-class-btn" data-class-id="@classDetail.id.id" data-class-name="@classDetail.className.name">
+         <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        <img class="card-img-top" src="@routes.Assets.versioned(s"images/classes/classroom-${index + 1 % 5}.jpeg")"
+        alt="Class Image" height="192px">
+        <div class="card-body">
+         <p class="card-text">some description about class ...</p>
+         <div class="row">
+          <div class="mx-auto">
+           <div class="col-sm-12 col-md-10 col-xl-8">
+            <button class="rounded btn btn-outline-info teachers-classes-btn teachers-classes-goto-btn" data-class-id="@classDetail.id.id" role="button">Go To Class</button>
+           </div>
+          </div>
          </div>
         </div>
        </div>
       </div>
-      </div>
-    }
+     }
+     </div>
+    </div>
+
    </div>
-  </div>
+  }
 
- </div>
-}
-
-
+  <div id="divForModalAreYouSureWantToDeleteClass"></div>
  </div>
 
 
+ @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
 
