--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -21,7 +21,10 @@
        <div class="card teacher-classes-card" >
         <div class="card-header">
          @classDetail.className.name
-        <button type="button" class="close delete-teacher-class-btn" data-class-id="@classDetail.id.id" data-class-name="@classDetail.className.name">
+        <button type="button" class="close delete-teacher-class-btn"
+        data-class-id="@classDetail.id.id"
+        data-class-name="@classDetail.className.name"
+        data-user-id="@tttUserId.value">
          <span aria-hidden="true">&times;</span>
         </button>
         </div>
