--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -28,7 +28,7 @@
      <label class="add-new-class-label" for="add-new-class-groups-button">Class Groups</label>
 
      <div id="add-new-class-groups-div"></div>
-     <button id="add-new-class-groups-button" type="button" class="btn btn-sm btn-primary add-new-class-button">
+     <button id="add-new-class-groups-button" type="button" class="btn btn-sm btn-outline-primary add-new-class-button">
       Add New Class Group</button>
     </div>
    </div>
