--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -17,7 +17,12 @@
     <div class="row">
      <div class="card-deck teacher-classes-deck">
      @for((classDetail, index) <- classes.zipWithIndex) {
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class=@if(classes.size > 1){
+       "col-xl-3 col-lg-4 col-md-6 col-sm-12"
+      }else{
+       "col-5"
+      }
+      >
        <div class="card teacher-classes-card" >
         <div class="card-header">
          @classDetail.className.name
