--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -25,6 +25,14 @@
 
    <div class="form-row add-new-class-form-row">
     <div class="col-sm-12">
+     <label class="add-new-class-desription-label" for="classDescription">Class Description</label>
+     <input type="text" id="classDescription" name="classDescription" class="form-control" placeholder="Enter class description" required>
+    </div>
+   </div>
+
+
+   <div class="form-row add-new-class-form-row">
+    <div class="col-sm-12">
      <label class="add-new-class-label" for="add-new-class-groups-button">Class Groups</label>
 
      <div id="add-new-class-groups-div"></div>
