--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -50,7 +50,7 @@
         <img class="card-img-top" src="@routes.Assets.versioned(s"images/classes/classroom-${index + 1 % 5}.jpeg")"
         alt="Class Image" height="192px">
         <div class="card-body">
-         <p class="card-text">some description about class ...</p>
+         <p class="card-text">@classDetail.classDescription</p>
          <div class="row">
           <div class="mx-auto">
            <div class="col-sm-12 col-md-10 col-xl-8">
