--- a/server/app/views/planning/classtimetables/classesHome.scala.html
+++ b/server/app/views/planning/classtimetables/classesHome.scala.html
@@ -26,7 +26,9 @@
     Add New Class</a>
 
    @if(classes.isEmpty) {
-    <h4 id="noClassesMsg">No classes created yet.</h4>
+       <div class="teacher-classes-deck">
+           <h5 class="noClassesMsg text-center">No classes created yet.</h5>
+       </div>
    } else {
      <div class="row">
       <div class="card-deck teacher-classes-deck">
@@ -72,12 +74,12 @@
 </div>
   <div class="tab-pane fade" id="elprofile" role="tabpanel" aria-labelledby="profile-tab">
       <div id="teachers-classes">
-   No Classes for this year
+          <p class="noClassesMsg  text-center">No Classes for this year</p>
       </div>
   </div>
   <div class="tab-pane fade" id="elcontact" role="tabpanel" aria-labelledby="contact-tab">
       <div id="teachers-classes">
-          No Classes for this year
+          <p class="noClassesMsg text-center">No Classes for this year</p>
       </div>
   </div>
 </div>
