--- a/server/public/stylesheets/classes.css
+++ b/server/public/stylesheets/classes.css
@@ -88,3 +88,11 @@
 .new-class-group-description {
     margin-top: 0.8rem;
 }
+
+.classNameCardHeader {
+    color: black;
+}
+
+#tabForHomeClasses {
+    margin-top: 1.5rem;
+}
