--- a/server/public/stylesheets/classes.css
+++ b/server/public/stylesheets/classes.css
@@ -96,3 +96,12 @@
 #tabForHomeClasses {
     margin-top: 1.5rem;
 }
+
+.manage-class-form-section {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+.manage-class-details-header {
+    margin-top: 2rem;
+}
